partial/quote-pdf-partial/force-app/main/default/objects/Legal_document__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The full legal text that will be used in contracts, quotes, or other output.</description>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>