partial/quote-pdf-partial/force-app/main/default/objects/Legal_document__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Human-readable version label such as “v1.0”, “2025.05”, or “R3”.</description>
    <label>Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>